--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 header a {
     background-color: white;
     color: lightslategray;
-    padding: 5px
 }
 
 a {
@@ -10,6 +9,13 @@ a {
     border: 3px solid lightslategray;
     font-size: 20px;
     border-radius: 10px;
-    padding: 5px;
     margin: 10px 10px 10px 10px;
+    padding: 5px 5px 5px 5px;
+    height: 25px;
+    width: 120px;
+}
+
+.ananas {
+    display: flex;
+    justify-content: center;
 }
