--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ header a {
     color: lightslategray;
 }
 
+header {
+    height: 200px;
+}
+
 a {
     text-decoration: none;
     color: lightslategrey;
